Correction reseñas, responsive version with errors in spacing

--- a/madrileno.css
+++ b/madrileno.css
@@ -161,15 +161,18 @@ font-weight: 700;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
+    max-width: 600px;
     height: 400px;
+    margin-top: 2rem;
 }
 
 .block {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-size: cover; /* Ajusta el tamaño de fondo para cubrir completamente el contenedor */
-    background-position: center; /* Centra la imagen */
+    background-size: cover; 
+    background-position: center; 
+    margin-top: 5vh;
 }
 
 .b-1 {
@@ -204,20 +207,21 @@ font-weight: 700;
 .overlay {
     position: absolute;
     width: 100%;
-    height: 50vh; /* Ajusta la altura del overlay según tus necesidades */
-    bottom: 0; /* Ajusta la posición según tus necesidades */
-    background: black; /* Uso de rgba para un fondo negro semitransparente */
-    z-index: 1; /* Ajusta el índice z para asegurarte de que el overlay esté encima de las imágenes */
+    height: 41vh;
+    bottom: 0; 
+    background: #2e1e45; 
+    z-index: 1; 
+    margin-top: 5vh;
 }
 .overlay .cuerpo {
-    font-size: 1.5em; /* Tamaño de fuente un 20% más grande que el valor predeterminado */
+    font-size: 1.5em; 
     font-family: poppins, sans-serif;
     color: #fff;
-    font-weight: 700; /* Reducido a 700 para un efecto negrita más sutil */
+    font-weight: 700; 
     font-style: normal;
-    line-height: 1.5; /* Espaciado entre líneas un 50% más grande que el valor predeterminado */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Sombra de texto suave */
-    letter-spacing: 0.5px; /* Espaciado entre letras ligeramente aumentado */
+    line-height: 1.5; 
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+    letter-spacing: 0.5px; 
     margin-top: 2rem;
     margin-left: 2rem;
     margin-right: 2rem;
@@ -226,17 +230,35 @@ font-weight: 700;
 }
 
 .title {
-    margin-top: 10rem;
+    margin-top: 10vh;
     text-align: center;
     font-family: "Arbutus Slab", serif;
-    font-size: 10em; /* Aumenta el tamaño de la fuente */
+    font-size: 6vw; 
     color: #ff695c;
     overflow: hidden;
+
 }
 
 .title .letter {
     display: inline-block;
     line-height: 1em;
     font-family: "Arbutus Slab", serif;
-    font-size: 1.0em; /* Aumenta el tamaño de la letra */
+    font-size: 1.0em; 
+}
+@media screen and (max-width: 600px) {
+    .overlay {
+        height: 30vh;
+    }
+
+    .overlay .cuerpo {
+        font-size: 1.5em;
+    }
+
+    .title {
+        font-size: 6em;
+    }
+
+    .container {
+        width: 90vw;
+    }
 }
